2020-06-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	compose-window: Make the "Open" option on the urlref-attachment
	context menu work.

	* src/sendmsg-window.cs
	  (on_open_url_cb): Get the top-level window from the compose
	  window; getting it from the menu-item leads to a Wayland
	  error;
	  (add_urlref_attachment): Populate BalsaAttachInfo:file_uri.

2020-06-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-widget-text: Actually pop up the context menu when
	right-clicking on an URL.

	* src/balsa-mime-widget-text.c (text_view_url_popup):

2020-06-16  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main: Sandbox all the webkit

	https://gitlab.gnome.org/GNOME/Initiatives/-/wikis/Sandbox-all-the-WebKit!

	* src/main.c (balsa_startup_cb):

2020-06-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Use GtkTreeView's "row-activated" signal instead of
	connecting to "button-press-event".

	* libbalsa/autocrypt.c (autocrypt_db_dialog_run),
	(row_activated_cb):
	* libbalsa/libbalsa-gpgme-cb.c (row_activated_cb),
	(lb_gpgme_select_key):

2020-06-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: restore filtering in a mailbox that is not currently
	being viewed.

	* libbalsa/mailbox.c (libbalsa_mailbox_message_match),
	(lbm_cache_message): make sure we cache message info when we need it
	for matching;
	* libbalsa/mailbox_local.c (message_match_real): guard against
	NULL threading-info;
	* src/filter-run-dialog.c (available_list_selection_changed),
	(selected_list_selection_changed): no need to disable the
	"Apply" buttons when the mailbox is not being viewed.

2020-06-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	filter-run-dialog: Disable "Apply selected" and "Apply now" when
	the mailbox is not currently being viewed in the main window. It
	no longer crashes, because of the previous commit, but it does
	not actually carry out any filters, so the user should see the
	option as disabled.
